# TurboGitHub

./: .gitignore  .rust-toolchain.toml  CARGO_OPTIMIZATION_GUIDE.md  CARGO_PERFORMANCE_ANALYSIS.md  CARGO_SLOW_DIAGNOSIS.md  Cargo.toml  LICENSE  README.md  RUST_UPDATE_GUIDE.md  TEST_REPORT.md  TurboGitHub 开发文档.md  add_icon_to_exe.bat  build-release.bat  config.toml  create_bundle_installer.ps1  create_installer.ps1  create_professional_installer.ps1  fix_icon_issue.ps1  fix_icon_simple.ps1  installer.iss  release.toml  setup-rust-mirror.ps1  test-gui-launch.ps1  test_acceleration.ps1  verify-domestic-sources.ps1  verify_implementation.ps1  发布检查清单.md  启动TurboGitHub.bat  国内源配置总结.md  国内源配置说明.md  工具链配置完成总结.md  工具链配置说明.md  快速发布指南.md  快速启动.bat  打包发布.bat  打包发布建议.md  打包发布方案总结.md  推送代码.bat  推送指南.md  测试指南.md  (+3 more)
.cargo/: config.toml  config.toml.example
.github/workflows/: release.yml
assets/: README.md
core/: Cargo.toml  config.toml  turbogithub.pac
core/src/: auto_proxy.rs  config.rs  dns_proxy_config.rs  dns_server.rs  github_traffic_monitor.rs  http_proxy.rs  ipc_server.rs  main.rs  pac_proxy.rs  process_filter.rs  process_traffic_filter.rs  scanner.rs  simple_network_monitor.rs  traffic_stats.rs
gui/: Cargo.toml  resources.rc
gui/src/: app.rs  daemon_client.rs  font_fix.rs  font_manager.rs  integrated_service.rs  ipc_client.rs  main.rs  traffic_monitor.rs  tray_manager.rs
