[workspace]
members = ["core", "gui"]
resolver = "2"

default-members = ["gui"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
tracing = "0.1"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.94"

[profile.release]
opt-level = 3        # 最大性能优化
lto = "thin"         # 轻量级 LTO（更快）
codegen-units = 4    # 多个代码单元（更快）
panic = "abort"      # 使用 abort 而不是 unwind
strip = true         # 剥离调试符号

[profile.dev]
opt-level = 1        # 轻度优化，提升运行速度
debug = 1            # 最少调试信息
incremental = true   # 启用增量编译
split-debuginfo = "unpacked"

# 为重量级依赖启用优化
[profile.dev.package."eframe"]
opt-level = 2
[profile.dev.package."egui"]
opt-level = 2
[profile.dev.package."image"]
opt-level = 2
[profile.dev.package."windows"]
opt-level = 2