[package]
name = "turbogithub-core"
version = "0.0.2"
edition = "2021"
rust-version = "1.94"

[dependencies]
tokio = { version = "1", features = ["full"] }
trust-dns-resolver = "0.23"
trust-dns-proto = "0.23"
tokio-tungstenite = "0.21"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.30"