[package]
name = "turbogithub-gui"
version = "0.0.1"
edition = "2021"

# 打包配置
[package.metadata.bundle]
name = "TurboGitHub"
identifier = "com.gautown.turbogithub"
version = "0.0.1"
authors = ["Gautown"]
description = "GitHub网络优化加速工具"
license = "MIT"
repository = "https://github.com/Gautown/TurboGitHub"

# Windows特定配置
[package.metadata.bundle.windows]
targets = ["x86_64-pc-windows-msvc"]
icon = ["../../assets/icons/logo.ico"]
resources = ["../../assets/icons/"]
installer = "msi"

# Linux特定配置
[package.metadata.bundle.linux]
targets = ["x86_64-unknown-linux-gnu"]
icon = ["../assets/icons/logo.png"]
resources = ["../assets/icons/"]

# macOS特定配置
[package.metadata.bundle.macos]
targets = ["x86_64-apple-darwin"]
icon = ["../assets/icons/logo.icns"]
resources = ["../assets/icons/"]
category = "public.app-category.developer-tools"

[profile.release]
opt-level = "z"      # 最小化优化
lto = true           # 链接时优化
codegen-units = 1    # 减少代码生成单元
panic = "abort"      # 使用 abort 而不是 unwind
strip = true         # 剥离调试符号

[profile.dev]
opt-level = 0        # 开发模式不优化

[dependencies]
eframe = { version = "0.33", features = [] }  # 移除persistence特性
egui = "0.33"
egui_extras = "0.33"  # 添加必要的依赖
tokio = { version = "1", features = ["rt", "sync", "time", "macros"] }  # 添加必要的特性
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }  # 添加必要的依赖
ico = "0.2"  # 重新添加ICO图标处理依赖
rand = "0.8"
tray-item = "0.10"
system-tray = "0.3"