[package]
name = "turbogithub-gui"
version = "0.0.2"
edition = "2021"
rust-version = "1.94"

# 打包配置
[package.metadata.bundle]
name = "TurboGitHub"
identifier = "com.gautown.turbogithub"
version = "0.0.2"
authors = ["Gautown"]
description = "GitHub 网络优化加速工具"
license = "GPL-2.0"
repository = "https://github.com/Gautown/TurboGitHub"

# Windows特定配置
[package.metadata.bundle.windows]
targets = ["x86_64-pc-windows-msvc"]
icon = ["../../assets/icons/logo.ico"]
resources = ["../../assets/icons/"]
installer = "msi"

# Linux特定配置
[package.metadata.bundle.linux]
targets = ["x86_64-unknown-linux-gnu"]
icon = ["../assets/icons/logo.png"]
resources = ["../assets/icons/"]

# macOS特定配置
[package.metadata.bundle.macos]
targets = ["x86_64-apple-darwin"]
icon = ["../assets/icons/logo.icns"]
resources = ["../assets/icons/"]
category = "public.app-category.developer-tools"

[dependencies]
eframe = { version = "0.33", features = [] }  # 移除 persistence 特性
egui = "0.33"
egui_extras = "0.33"  # 添加必要的依赖
tokio = { version = "1", features = ["rt", "sync", "time", "macros", "net"] }  # 添加必要的特性
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }  # 添加必要的依赖
ico = "0.2"  # ICO 图标处理依赖
image = "0.25"  # PNG 图标处理支持
rand = "0.8"
# 系统托盘和线程通信依赖
systray = "0.4"
crossbeam-channel = "0.5.15"
# 日志依赖
env_logger = "0.11"
# IPC 通信相关依赖
tokio-tungstenite = "0.21"
futures-util = "0.3"
# Windows API 支持（用于系统托盘功能）
[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
]}
thiserror = "1.0"
tracing = "0.1"